# django_issue_12203

./: README.md  manage.py  pyproject.toml
django_issue_12203/: asgi.py  settings.py  urls.py  wsgi.py
